# ConanTemplate

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main.cpp
scripts/: Build.bat  Run.bat
